# calculator_project

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: CalculationRequest.hpp  CalculatorApp.hpp  CalculatorEngine.hpp  CalculatorExceptions.hpp  Logger.hpp
math_lib/: math_lib.cpp  math_lib.h
oop/: CMakeLists.txt  main.cpp
oop/include/: CalculatorApp.hpp  CalculatorEngine.hpp  InputParser.hpp
oop/src/: CalculationRequest.cpp  CalculatorApp.cpp  InputParser.cpp
oop/tests/: CMakeLists.txt  calculator_test.cpp
src/: CalculationRequest.cpp  CalculatorApp.cpp  CalculatorEngine.cpp  CalculatorExceptions.cpp  Logger.cpp  calc.cpp  header.hpp  main.cpp  templib.hpp
tests/: CMakeLists.txt  calculator_test.cpp
